--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "objects-to-csv": "^1.3.6",
-    "pdf-parse": "^1.1.1",
-    "playwright": "^1.43.1",
-    "puppeteer": "^22.6.5"
+    "pdf-parse": "^1.1.1"
   }
 }
