--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "fs-extra": "^11.2.0",
+    "glob": "^11.0.0",
     "objects-to-csv": "^1.3.6",
-    "pdf-parse": "^1.1.1"
+    "path": "^0.12.7",
+    "pdf-parse": "^1.1.1",
+    "vcard-creator": "^0.7.1"
   }
 }
