--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,20 @@
 /node_modules
 /saved
 /course
+/zip
 /saved/2
 /saved/1
+/saved1
 /excel
 /vcf_files
 /excel_files
+/Supplementary_vcf_files
+/Supplementary_excel_files
+/Shopping_vcf_files
+/Shopping_excel_files
 /merged_data.xlsx
 /merged_data2.xlsx
+/merged_data3.xlsx
 /iterationsv2
 /iterations
 /__pycache__
